oxiplate-derive/tests/config/crates/escaper-group-non-path/tests/broken/escaper-group-non-path.stderr
error: Failed to parse `/oxiplate.toml`: Expected path `::package/HtmlEscaper` to be a valid path (`(::[a-zA-Z_][a-zA-Z0-9_]*)+`)
 --> tests/broken/escaper-group-non-path.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
