oxiplate-derive/tests/config/crates/escaper-group-non-path/tests/broken/escaper-group-non-path.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline("hello world!")]
struct Data;

fn main() {
    assert_eq!(format!("{}", Data), "hello world!");
}
